# test-gf2

./: CMakeLists.txt  GF2GPU.cpp  GF2GPU.hpp  GF2Matrix.cpp  GF2Matrix.hpp  GF2MatrixSIMD.cpp  GF2MatrixSIMD_arm.cpp  GF2MatrixSIMD_x86.cpp  GF2TestFramework.cpp  GF2TestFramework.hpp  README.md  gf2_multiply.metal  gf2_multiply_m4r.metal  gf2_multiply_tiled.metal  gf2_multiply_transposed.metal  gf2_multiply_vectorized.metal  gf2_test_results.csv  main.cpp
analysis/: initial.py
